<resources>
    <string name="app_name">GroceryList</string>
    <string name="title">My grocery list</string>
    <string name="homeBtn">Home</string>
    <string name="marketsBtn">Markets</string>
    <string name="defaultListName">Nome da lista</string>
    <string name="defaultMarketName">Nome do mercado</string>
    <string name="defaultItemQntd">0</string>
    <string name="defaultMarketDistance">0 Km</string>
    <string name="editBtnDescription">Edit Button</string>
    <string name="deleteBtnDescription">Delete Button</string>
    <string name="addList">+ Add List</string>
    <string name="backBtnDescription">Voltar</string>
</resources>