<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/listaNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/defaultListName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/qntdItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/defaultItemQntd" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/editBtnDescription"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/deleteBtnDescription"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>